# paimon

./: LICENSE  README.md  main.py  pyproject.toml
paimon/: __init__.py  __main__.py  agent.py  app.py  cli.py  compaction.py  config.py  diff.py  login.py  mentions.py  session.py  tools.py  ui.py
tests/: helpers.py  test_agent.py  test_app.py  test_cli.py  test_compaction.py  test_diff.py  test_mentions.py  test_session.py  test_tools.py
