[project]
name = "paimon"
version = "0.1.1"
description = "A minimal code agent built on litellm + textual"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.89.4",
    "textual>=8.2.7",
]

[project.scripts]
paimon = "paimon.app:main"

[tool.uv]
package = true

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
